# src/api/dto/user.go
@@ -26,10 +26,3 @@ type UserLogin struct {
 	UserName string `json:"userName" validate:"required,max=64,min=5"`
 	Password string `json:"password" validate:"required,min=8,max=64,containsany=abcdefghijklmnopqrstuvwxyz,containsany=ABCDEFGHIJKLMNOPQRSTUVWXYZ,containsany=1234567890"`
 }
-
-type TokenDetail struct {
-	AccessToken            string `json:"accessToken"`
-	RefreshToken           string `json:"refreshToken"`
-	AccessTokenExpireTime  int64  `json:"accessTokenExpireTime"`
-	RefreshTokenExpireTime int64  `json:"refreshTokenExpireTime"`
-}
